--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
-          <svg class="modal close-icon-icon" width="8" height="8">
-            <use href="./images/symbol-defs.svg#icon-close"></use>
+          <svg class="modal close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
