--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
         </div>
       </div>
     </footer>
+
+    /*-----Modal*/
+
     <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
