--- a/index.html
+++ b/index.html
@@ -405,6 +405,9 @@
         </div>
       </section>
     </main>
+
+    <!-- footer -->
+
     <footer class="footer-f">
       <div class="container footer-title">
         <div class="soc-footer">
@@ -448,13 +451,29 @@
               </a>
             </li>
           </ul>
+          <div class="footer-form">
+           <p class="footer-text">Subscribe</p>
+            <form class="ft-form-label">
+            <label>
+              <input
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
+            
+            <button class="footer-btn" type="submit" >Subscribe<svg class="footer-icon-icon" width="24" height="20">
+                  <use href="./images/icons.svg#con-samolot"></use>
+                </svg></button>
+            
+          </div>
         </div>
-      </div>
-    </footer>
+          </footer>
 
     /*-----Modal*/
 
-    <div class="backdrop is-open">
+    <div class="backdrop ">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -471,7 +490,7 @@
                 class="modal-input"
                 id="user-name"
                 name="user-name"
-                placeholder="your name"
+                placeholder=""
               />
               <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black"></use>
@@ -486,7 +505,7 @@
                 class="modal-input"
                 id="user-tel"
                 name="user-tel"
-                placeholder="user-tel"
+                placeholder=""
               />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
@@ -494,19 +513,47 @@
             </div>
           </div>
           <div class="modal-fild">
-            <label for="" class="modal-label">Email</label>
+            <label for="user-email" class="modal-label">Email</label>
             <div class="input-wrap">
               <input
                 type="email"
                 class="modal-input"
                 id="user-email"
                 name="user-email"
-                placeholder="user-tel"
+                placeholder=""
               />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
+          </div>
+
+          <div class="modal-fild">
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea
+              name="user-comment"
+              placeholder="Text input"
+              class="modal-text"
+              id="user-comment"
+            ></textarea>
+          </div>
+          <div class="modal-check">
+            <input
+              type="checkbox"
+              class="check-input visually-hidden"
+              name="user-policy"
+              value="true"
+              id="user-policy"
+            />
+            <label for="user-policy" class="label-checkbox">
+              <span class="checkbox">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="check-link">Privacy Policy</a>
+            </label>
           </div>
           <button class="modal-sent-btn" type="submit">Send</button>
         </form>
