--- a/index.html
+++ b/index.html
@@ -451,29 +451,32 @@
               </a>
             </li>
           </ul>
-          <div class="footer-form">
-           <p class="footer-text">Subscribe</p>
-            <form class="ft-form-label">
-            <label>
+        </div>
+        <div class="footer-form">
+          <p class="footer-text">Subscribe</p>
+          <form class="ft-form-label">
+            <label class="ft-form-label">
               <input
                 type="email"
                 name="footer-email"
-                placeholder="E-mail"
                 class="footer-input"
+                placeholder="E-mail"
               />
             </label>
-            
-            <button class="footer-btn" type="submit" >Subscribe<svg class="footer-icon-icon" width="24" height="20">
-                  <use href="./images/icons.svg#con-samolot"></use>
-                </svg></button>
-            
-          </div>
+
+            <button class="footer-btn" type="submit">
+              Subscribe<svg class="footer-icon-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-samolot"></use>
+              </svg>
+            </button>
+          </form>
         </div>
-          </footer>
+      </div>
+    </footer>
 
     /*-----Modal*/
 
-    <div class="backdrop ">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
