--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </label>
 
             <button class="footer-btn" type="submit">
-              Subscribe<svg class="footer-icon-icon" width="24" height="20">
+              Subscribe<svg class="footer-icon-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-samolot"></use>
               </svg>
             </button>
@@ -476,7 +476,7 @@
 
     /*-----Modal*/
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -495,7 +495,7 @@
                 name="user-name"
                 placeholder=""
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
@@ -544,11 +544,11 @@
             <input
               type="checkbox"
               class="check-input visually-hidden"
-              name="user-policy"
+              name="user-privacy"
               value="true"
-              id="user-policy"
+              id="user-privacy"
             />
-            <label for="user-policy" class="label-checkbox">
+            <label for="user-privacy" class="label-checkbox">
               <span class="checkbox">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
