--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
     /*-----Modal*/
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
