--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
               </svg>
             </div>
           </div>
-
-          <div class="modal-fild">
+          <!-- textArea -->
+          <div class="modal-fild m-fild">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="user-comment"
